# private

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
.claude/: settings.json
app/: analysis.py  backtest.py  calibration.py  collector.py  context.py  daily.py  data.py  db.py  exits.py  live.py  main.py  outcomes.py  report.py  scheduler.py  screen_sim.py  screener.py  selection.py  simulator.py  stocks.py  strategies.py  validation.py
app/templates/: _validate_style.html  error.html  index.html  journal.html  live.html  live_panel.html  logs.html  optimize.html  paper.html  report.html  report_panel.html  result.html  screen.html  screen_accuracy.html  screen_panel.html  screen_sim.html  validate.html  validate_scan.html  validate_single.html
docs/: worklog.md
scripts/: check_data.py  install_launchd.sh  run_job.sh  uninstall_launchd.sh  worklog_check.py
scripts/launchd/: com.stock.accuracy.plist  com.stock.screen.evening.plist  com.stock.screen.morning.plist
scripts/windows/: README.md  check.ps1  register_tasks.ps1  run_job.bat  start_server.bat  unregister_tasks.ps1
