[project]
name = "stock-backtest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.137.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.4.1",
]
